# thia-lite

./: .gitignore  README.md  install.sh  install_termux.sh  pyproject.toml  thia-lite.spec
.github/workflows/: electron.yml  publish.yml  release.yml
desktop/: package-lock.json  package.json
desktop/electron/: llm-engine.js  main.js  mcp-client.js  package-lock.json  package.json  preload.js  simple-ipc-client.js
desktop/electron/scripts/: build-win-bundle.js  prebuild.js  smoke-test-asar.js
desktop/electron/src/: app.js  index.html  installer.html  setup.html  styles.css
desktop/src/: app.js  index.html  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
scripts/: convert_picatrix.py  ingest_rules.py  preflight.py  thia-lite-debug.bat
tests/: test_astrology.py  test_financial.py  test_fixed_stars.py  test_profections.py  test_reliability.py  test_timezone.py  test_vedic.py
thia_lite/: __init__.py  __main__.py  api_server.py  cli.py  config.py  db.py  ipc_server.py  tui.py  updater.py
thia_lite/engines/: __init__.py  advanced_astrology.py  astrology.py  astrology_rules_data.py  autonomy.py  chart_renderer.py  financial_astrology.py  fixed_stars.py  ported_tools.py  primary_directions.py  profections.py  progressions.py  time_lords.py  timezone_manager.py  vedic_astrology.py  vedic_yogas_data.py  verification.py
thia_lite/llm/: __init__.py  client.py  conversation.py  ollama_client.py  rlm_engine.py  tool_executor.py
thia_lite/mcp/: __init__.py  client.py  llm_tool.py  server.py
thia_lite/rules/: __init__.py  firmicus_rules_data.json  lilly_rules.py  lilly_rules_data.json  picatrix_rules_data.json  ptolemy_rules.py  ptolemy_rules_data.json  valens_rules_data.json
