[package]
name = "thia-lite-desktop"
version = "0.1.3"
edition = "2021"
description = "Thia-Lite Desktop — AI Astrology Assistant"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "1", features = [] }
